@startuml
title Sustainable Packaging Service

class Packaging {
  -material: Material
  +getMass(): BigDecimal
  +canFitItem(Item): boolean
}

class Box {
  -material: CORRUGATE
  -length: BigDecimal
  -width: BigDecimal
  -height: BigDecimal
  +getMass(): BigDecimal
  +canFitItem(Item): boolean
}

class PolyBag {
  -material: LAMINATED_PLASTIC
  -volume: BigDecimal
  +getMass(): BigDecimal
  +canFitItem(Item): boolean
}

enum Material {
  + CORRUGATE
  + LAMINATED_PLASTIC
}

Packaging <|-- Box
Packaging *- Material
Packaging <|-- PolyBag

@enduml